--- a/app_stark/templates/stark/changelist.html
+++ b/app_stark/templates/stark/changelist.html
@@ -2,18 +2,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>STARK|数据列表</title>
-	<link rel="stylesheet" href="{% static 'stark/stark.css' %}">
+    <meta charset="UTF-8">
+    <title>STARK|数据列表</title>
+    <link rel="stylesheet" href="{% static 'stark/stark.css' %}">
 </head>
 <body>
 <h1>数据列表</h1>
 <table border="1">
-	{% for row in data_list %}
-		<tr>
-			<td>{{ row }}</td>
-		</tr>
-	{% endfor %}
+    <thead>
+    <tr>
+        {% for item in header_list %}
+            <th>{{ item }}</th>
+        {% endfor %}
+    </tr>
+    </thead>
+    <tbody>
+    {% for row in body_list %}
+        <tr>
+            {% for ele in row %}
+                <td>{{ ele }}</td>
+            {% endfor %}
+        </tr>
+    {% endfor %}
+
+    </tbody>
 </table>
 </body>
 <script src="{% static 'stark/stark.js' %}"></script>
