--- a/app_stark/templates/stark/changelist.html
+++ b/app_stark/templates/stark/changelist.html
@@ -1,6 +1,9 @@
 {% extends 'layout.html' %}
 {% block content %}
 	<div class="luffy-container">
+		{% if add_btn %}
+			<div style="margin: 20px 0">{{ add_btn|safe }}</div>
+		{% endif %}
 		<table class="table table-bordered">
 			<thead>
 			<tr>
@@ -19,9 +22,20 @@
 			{% endfor %}
 			</tbody>
 		</table>
-		<nav class="pagination">
-			<ul>
-				{{ pager.page_html|safe }}
+
+		<nav aria-label="Page navigation">
+			<ul class="pagination">
+				<li>
+					<a href="#" aria-label="Previous">
+						<span aria-hidden="true">&laquo;</span>
+					</a>
+				</li>
+				<li>{{ pager.page_html|safe }}</li>
+				<li>
+					<a href="#" aria-label="Next">
+						<span aria-hidden="true">&raquo;</span>
+					</a>
+				</li>
 			</ul>
 		</nav>
 	</div>
