--- a/app_stark/templates/stark/changelist.html
+++ b/app_stark/templates/stark/changelist.html
@@ -1,14 +1,46 @@
 {% extends 'layout.html' %}
 {% block content %}
 	<div class="luffy-container">
+		<!-- 批量操作下拉框 -->
+		<div style="float: left;margin: 20px 20px 0 0;">
+			<div class="form-inline">
+				<div class="form-group">
+					<select class="form-control">
+						<option value="">请选择操作</option>
+						<option value="">批量修改</option>
+						<option value="">批量删除</option>
+					</select>
+					<input type="button" value="执行" class="btn btn-primary"/>
+				</div>
+			</div>
+		</div>
+
+		<!-- 添加按钮 -->
 		{% if add_btn %}
-			<div style="margin: 20px 0">{{ add_btn|safe }}</div>
+			<div style="margin: 20px 0;float: left;">{{ add_btn|safe }}</div>
 		{% endif %}
+
+		<!-- 搜索框 -->
+		{% if search_list %}
+			<div style="float: right;margin: 20px 0;">
+				<form method="get" class="form-inline">
+					<div class="form-group">
+						<input type="text" class="form-control" name="q" value="{{ search_value }}"
+						       placeholder="输入关键字搜索">
+						<button class="btn btn-primary" type="submit">
+							<i class="fa fa-search" aria-hidden="true"></i>
+						</button>
+					</div>
+				</form>
+			</div>
+		{% endif %}
+
+		<!-- 内容展示 -->
 		<table class="table table-bordered">
 			<thead>
 			<tr>
 				{% for item in header_list %}
-					<th>{{ item }}</th>
+					<th style="text-align: center;color: #337ab7">{{ item }}</th>
 				{% endfor %}
 			</tr>
 			</thead>
@@ -22,7 +54,7 @@
 			{% endfor %}
 			</tbody>
 		</table>
-
+		<!-- 分页展示 -->
 		<nav aria-label="Page navigation">
 			<ul class="pagination">
 				<li>{{ pager.page_html|safe }}</li>
