--- a/app_stark/templates/layout.html
+++ b/app_stark/templates/layout.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="{% static 'stark/css/layout.css' %}">
 	<link rel="stylesheet" href="{% static 'stark/css/nav.css' %}">
 	<link rel="stylesheet" href="{% static 'stark/css/commons.css' %}">
+    <link rel="stylesheet" href="{% static 'stark/css/search_group.css' %}">
 	{% block css %}{% endblock %}
 </head>
 <body>
